org.json: solving deprecations